<resources>
    <string name="app_name">Attendance</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="label_google_sign_in" translatable="false">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in" translatable="false">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login" translatable="false">Firebase + Facebook Login</string>
    <string name="desc_facebook_login" translatable="false">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login" translatable="false">Firebase + Twitter Login</string>
    <string name="desc_twitter_login" translatable="false">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword" translatable="false">Login/Logout</string>
    <string name="desc_emailpassword" translatable="false">Use an email and password to authenticate with Firebase.</string>
    <string name="label_anonymous_auth" translatable="false">Anonymous Authentication</string>
    <string name="desc_anonymous_auth" translatable="false">Sign in anonymously and then later upgrade to a full Firebase Auth user..</string>
    <string name="label_custom_auth" translatable="false">Custom Authentication</string>
    <string name="desc_custom_auth" translatable="false">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_storage" translatable="false">Storage</string>
    <string name="desc_storage" translatable="false">Upload camera image to Firebase, download image from Firebase.</string>
    <string name="label_database" translatable="false">Database</string>
    <string name="desc_database" translatable="false">Database Firebase example.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token" translatable="false">Get Token</string>
    <string name="sign_in" translatable="false">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out" translatable="false">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token" translatable="false">Custom Token</string>
    <string name="signed_out" translatable="false">Signed Out</string>
    <string name="token_null" translatable="false">Token: null</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup" translatable="false">Firebase logo and name</string>
    <string name="loginfb">Login to Firebase.</string>
    <string name="outwork">You are out of work now.</string>
    <string name="atwork">You are at work now.</string>
    <string name="firebase_status_fmt" translatable="false">Firebase User: %s</string>
    <string name="firebase_user_management" translatable="false">Firebase User Management</string>
    <string name="google_status_fmt" translatable="false">Google User: %s</string>
    <string name="google_title_text" translatable="false">Google Sign In</string>
    <string name="facebook_status_fmt" translatable="false">Facebook User: %s</string>
    <string name="facebook_title_text" translatable="false">Facebook Login</string>
    <string name="emailpassword_status_fmt" translatable="false">Email User: %s</string>
    <string name="emailpassword_usico_fmt">ID company: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="twitter_status_fmt" translatable="false">Twitter User: %s</string>
    <string name="twitter_title_text" translatable="false">Twitter Login</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt" translatable="false">Email: %s</string>
    <string name="camera_button_text" translatable="false">Upload</string>
    <string name="sign_in_prompt" translatable="false">Sign In to begin</string>
    <string name="take_photo_prompt" translatable="false">Upload a Photo</string>
    <string name="download">Download</string>
    <string name="sign_in_anonymously" translatable="false">Sign In</string>
    <string name="rationale_storage" translatable="false">This sample reads images from your camera to demonstrate uploading.</string>
    <string name="label_link" translatable="false">Link to Uploaded File</string>
    <string name="label_download" translatable="false">Download File</string>
    <string name="action_settings">Settings</string>
    <string name="action_setuserimage">Set my user image</string>
    <string name="action_seticoimage">Set my company image</string>
    <string name="menu_login" translatable="false">Log in</string>
    <string name="menu_logout" translatable="false">Log out</string>
    <string name="menu_settings">Settings</string>
    <string name="login_label" translatable="false">Log In</string>
    <string name="email_label" translatable="false">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="kontzmaz">Delete</string>
    <string name="randomdel" translatable="false">Random Delete</string>
    <string name="kontadd">Add</string>
    <string name="kontnic">Back</string>
    <string name="next">Next</string>
    <string name="delitem">Delete item</string>
    <string name="cantdel">You can not delete or edit items older than 3 min.</string>
    <string name="kontedit">Edit</string>
    <string name="edititem">Edit item</string>
    <string name="item">Item</string>
    <string name="servername_title">Server name.</string>
    <string name="servername_summary">Server name to which you want to connect, for example www.edcom.sk, without http:\\</string>
    <string name="username_title">Mail username.</string>
    <string name="username_summary">Mail - username for login to Firebase.</string>
    <string name="userpsw_title">User password.</string>
    <string name="userpsw_summary">Password for login to Firebase.</string>
    <string name="fir_title">Number of company.</string>
    <string name="fir_summary">Number of company to which you want to connect.</string>
    <string name="rok_title">Accounting year.</string>
    <string name="rok_summary">Accounting year for attendance.</string>
    <string name="ume_title">Accounting month.</string>
    <string name="ume_summary">Accounting month for attendance. You can change in All Eployees Absences activity</string>
    <string name="ustype_title">Type of User.</string>
    <string name="ustype_summary">Set App by login. Admin, common user....</string>
    <string name="usuid_title">UID of User.</string>
    <string name="usuid_summary">Set App by login. UID of user....</string>
    <string name="usadmin_title">User is admin.</string>
    <string name="usadmin_summary">0=no, 1=yes</string>
    <string name="usico_title">Company of User.</string>
    <string name="usico_summary">ID of Company where user work.</string>
    <string name="usosc_title">ID number of User.</string>
    <string name="usosc_summary">ID number of User at Company where user work.</string>
    <string name="usatw_title">User at work.</string>
    <string name="usatw_summary">1-user at work, 0-user leave work.</string>
    <string name="usname_title">Name of user.</string>
    <string name="usname_summary">Name of logged user.</string>
    <string name="slider" translatable="false">Slider</string>
    <string name="drawer_open" translatable="false">Slider Menu Opened</string>
    <string name="drawer_close" translatable="false">Slider Menu Closed</string>
    <string name="desc" translatable="false">Desc</string>
    <string-array name="nav_drawer_items">
        <item >All employees absences</item>
        <item >Employees on Google Maps</item>
        <item >Beacon activity</item>
        <item >Free</item>
        <item >Free</item>
        <item >Free</item>
    </string-array>
    <string name="app_name1" translatable="false">Slider Menu 1</string>
    <string name="app_name2" translatable="false">Slider Menu 2</string>
    <string name="desc_list_item_icon" translatable="false">Item Icon</string>
    <string name="descimg" translatable="false">descimg</string>
    <string name="empty">empty</string>
    <string name="action_myemployee">My employees</string>
    <string name="action_mycompany">My company</string>
    <string name="action_mycompanies">My companies</string>
    <string name="action_approve">Approve the Absences</string>
    <string name="action_absmysql">Get Server Absences</string>
    <string name="noico">No company ID</string>
    <string name="qico">Do you want to choose your company ID ?</string>
    <string name="incoming">Incoming work</string>
    <string name="leaving">Leaving work</string>
    <string name="qincoming">Do you want to income to work ?</string>
    <string name="qleaving">Do you want to leave work ?</string>
    <string name="login" translatable="false">Login</string>
    <string name="logout">Logout</string>
    <string name="interruption">Interruption</string>
    <string name="absence">Absence</string>
    <string name="newabsence">New Absence</string>
    <string name="absences">Absences</string>
    <string name="attendances">Attendances</string>
    <string name="abstypes">AbsTypes</string>
    <string name="approve">Approve</string>
    <string name="refuse">Refuse</string>
    <string name="close">Close</string>
    <string-array name="AbsenceSpinnerArray">
        <item>506 Holliday</item>
        <item>510 Bank holliday</item>
        <item>518 Visit Doctor</item>
        <item>520 Other</item>
        <item>801 Illness</item>
    </string-array>
    <string-array name="AbsenceSpinnerArrayIdm">
        <item>506</item>
        <item>510</item>
        <item>518</item>
        <item>520</item>
        <item>801</item>
    </string-array>
    <string-array name="AbsenceSpinnerArrayIname">
        <item>Holliday</item>
        <item>Bank holliday</item>
        <item>Visit Doctor</item>
        <item>Other</item>
        <item>Illness</item>
    </string-array>
    <string name="select_absence">Select a absence</string>
    <string name="dateod">from date</string>
    <string name="datedo">to date</string>
    <string name="hodiny">hours for 1.day, 0,nothing = all day</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="hodxb">hours</string>
    <string name="datm">posted</string>
    <string name="postedby">posted by</string>
    <string name="textyes">Yes</string>
    <string name="textno">No</string>
    <string name="textok">OK</string>
    <string name="cantedititem">You can not edit the items.</string>
    <string name="cantdelitem">You can not delete the items.</string>
    <string name="notconnected">Not connected.</string>
    <string name="fullosc">employee Id</string>
    <string name="fullfirma">company Id</string>
    <string name="name">Name</string>
    <string name="type">type</string>
    <string name="city">City</string>
</resources>