<?xml version="1.0" encoding="utf-8"?>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">


		<include
			android:id="@+id/tool_bar"
			layout="@layout/toolbar_custom">
		</include>

		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:background="@drawable/pozadie"
			android:id="@+id/background"
			>

			<TextView
				android:id="@+id/textup"
				style="@style/ThemeOverlay.MyTextDetail"
				android:layout_centerHorizontal="true"
				/>

			<LinearLayout
				android:id="@+id/linlayup"
				android:layout_width="fill_parent"
				android:layout_height="90dp"
				android:orientation="horizontal"
				android:layout_below="@+id/textup">

				<ImageButton
					android:contentDescription="@string/descimg"
					android:id="@+id/imglogin"
					android:src="@drawable/login"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_marginBottom="1dp"
					android:layout_marginLeft="2dp"
					android:layout_marginRight="5dp"
					android:layout_marginTop="0dp"
					android:layout_weight="1"
					android:adjustViewBounds="true"
					android:padding="20dp"
					android:clickable="true"
					android:scaleType="fitCenter" />


				<ImageButton
					android:contentDescription="@string/descimg"
					android:id="@+id/imgnepritomnost"
					android:src="@drawable/nepritomnost"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_marginBottom="1dp"
					android:layout_marginLeft="2dp"
					android:layout_marginRight="5dp"
					android:layout_marginTop="0dp"
					android:layout_weight="1"
					android:adjustViewBounds="true"
					android:padding="20dp"
					android:clickable="true"
					android:scaleType="fitCenter" />


			</LinearLayout>

			<LinearLayout
				android:id="@+id/linlayup2"
				android:layout_width="fill_parent"
				android:layout_height="20dp"
				android:orientation="horizontal"
				android:layout_below="@+id/linlayup">

				<TextView
					android:id="@+id/text3"
					android:text="@string/login"
					android:visibility="visible"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="center"
					/>

				<TextView
					android:id="@+id/text4"
					android:text="@string/absence"
					android:visibility="visible"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="center"
					/>



			</LinearLayout>


			<TextView
				android:id="@+id/usico"
				style="@style/ThemeOverlay.MyTextDetail"
				android:text="@string/signed_out"
				android:layout_centerHorizontal="true"
				android:layout_below="@+id/linlayup2"/>


			<TextView
				android:id="@+id/status"
				style="@style/ThemeOverlay.MyTextDetail"
				android:text="@string/signed_out"
				android:layout_centerHorizontal="true"
				android:layout_below="@+id/usico"/>

			<TextView
				android:id="@+id/iprofit"
				android:visibility="invisible"
				android:layout_width="wrap_content"
				android:layout_height="1dp"
				android:layout_alignParentRight="true"
				android:layout_below="@+id/status"/>

			<LinearLayout
				android:id="@+id/linlay"
				android:layout_width="fill_parent"
				android:layout_height="90dp"
				android:orientation="horizontal"
				android:layout_below="@+id/status">

				<ImageButton
					android:contentDescription="@string/descimg"
					android:id="@+id/intowork"
					android:src="@drawable/intowork"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_marginBottom="1dp"
					android:layout_marginLeft="2dp"
					android:layout_marginRight="5dp"
					android:layout_marginTop="0dp"
					android:layout_weight="1"
					android:adjustViewBounds="true"
					android:padding="20dp"
					android:clickable="true"
					android:scaleType="fitCenter" />


				<ImageButton
					android:contentDescription="@string/descimg"
					android:id="@+id/outsidework"
					android:src="@drawable/outsidework"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_marginBottom="1dp"
					android:layout_marginLeft="2dp"
					android:layout_marginRight="5dp"
					android:layout_marginTop="0dp"
					android:layout_weight="1"
					android:adjustViewBounds="true"
					android:padding="20dp"
					android:clickable="true"
					android:scaleType="fitCenter" />


			</LinearLayout>


			<LinearLayout
				android:id="@+id/linlay2"
				android:layout_width="fill_parent"
				android:layout_height="20dp"
				android:orientation="horizontal"
				android:layout_below="@+id/linlay">

				<TextView
					android:id="@+id/text1"
					android:text="@string/incoming"
					android:visibility="visible"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="center"
					/>

				<TextView
					android:id="@+id/text2"
					android:text="@string/leaving"
					android:visibility="visible"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="center"
					/>



			</LinearLayout>


		<ImageView
			android:contentDescription="@string/descimg"
			android:id="@+id/mycompany"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
			android:layout_alignParentBottom="true"
            android:layout_below="@+id/linlay2"
			android:src="@drawable/clock"/>

		</RelativeLayout>

	</LinearLayout>
