<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/selector_medium_high"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/ico_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/icot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/fullfirma"
                android:layout_weight="1"
                tools:text="7" />

            <EditText
                android:id="@+id/icox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginLeft="5dp"
                android:maxLines="1"
                android:layout_weight="2"
                android:layout_toRightOf="@+id/icot"
                tools:text="7" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ico_layout"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/namet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/name"
                android:layout_weight="1"
                tools:text="7" />

            <EditText
                android:id="@+id/namex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginLeft="5dp"
                android:maxLines="1"
                android:layout_weight="2"
                android:layout_toRightOf="@+id/namet"
                tools:text="7" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/city_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_layout"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cityt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/city"
                android:layout_weight="1"
                tools:text="7" />

            <EditText
                android:id="@+id/cityx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginLeft="5dp"
                android:maxLines="1"
                android:layout_weight="2"
                android:layout_toRightOf="@+id/cityt"
                tools:text="7" />

        </LinearLayout>



</RelativeLayout>